--- a/argocd/dev-applicationset.yaml
+++ b/argocd/dev-applicationset.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: app-dev
-  namespace: argocd
+  namespace: argocd-prd
 spec:
   goTemplateOptions: ["missingkey=error"]
   generators:
