--- a/argocd/prd-applicationset.yaml
+++ b/argocd/prd-applicationset.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: app-prod
-  namespace: argocd
+  namespace: argocd-prd
 spec:
   generators:
   - git:
