--- a/argocd/prd-applicationset.yaml
+++ b/argocd/prd-applicationset.yaml
@@ -4,24 +4,25 @@ metadata:
   name: app-prod
   namespace: argocd-prd
 spec:
+  goTemplate: true
+  goTemplateOptions: ["missingkey=error"]
   generators:
   - git:
       repoURL: https://github.com/luisbianconi/aulao-pipeline.git
       revision: HEAD
-      branches:
-      - "prd-*"
+      branchFilter: "prd-*"
   template:
     metadata:
-      name: '{{branch}}'
+      name: '{{.branch}}'
     spec:
       project: default
       source:
         repoURL: https://github.com/luisbianconi/aulao-pipeline.git
-        targetRevision: '{{branch}}'
+        targetRevision: '{{.branch}}'
         path: 'prd/helloworld-docker/helm'
       destination:
         server: https://kubernetes.default.svc
-        namespace: '{{branch}}'
+        namespace: '{{.branch}}'
       syncPolicy:
         automated:
           prune: false
