feat: adding monitoring

--- a/argocd/kube-prometheus.yaml
+++ b/argocd/kube-prometheus.yaml
@@ -14,9 +14,12 @@ spec:
     spec:
       project: default
       source:
-        repoURL: https://github.com/luisbianconi/infrastructure.git
-        targetRevision: 'main'
-        path: 'monitoring/kube-prometheus'
+        repoURL: https://prometheus-community.github.io/helm-charts
+        chart: kube-prometheus-stack
+        targetRevision: 56.6.0 # coloque a versão desejada
+        helm:
+          valueFiles:
+            - https://raw.githubusercontent.com/luisbianconi/infrastructure/main/monitoring/values/values-prod.yaml
       destination:
         server: https://kubernetes.default.svc
         namespace: 'monitoring'
