--- a/argocd/kube-prometheus.yaml
+++ b/argocd/kube-prometheus.yaml
@@ -1,37 +1,23 @@
 apiVersion: argoproj.io/v1alpha1
-kind: ApplicationSet
+kind: Application
 metadata:
-  name: monitoring-kube-prometheus
-  namespace: argocd-prd
+  name: monitoring-appofapps
+  namespace: argocd
 spec:
-  generators:
-  - list:
-      elements:
-      - env: production
-  template:
-    metadata:
-      name: 'monitoring'
-    spec:
-      project: default
-      source:
-        repoURL: https://prometheus-community.github.io/helm-charts
-        chart: kube-prometheus-stack
-        targetRevision: 56.6.0 # coloque a versão desejada
-        helm:
-          valueFiles:
-            - https://raw.githubusercontent.com/luisbianconi/infrastructure/main/monitoring/values/values-prod.yaml
-      destination:
-        server: https://kubernetes.default.svc
-        namespace: 'monitoring'
-      syncPolicy:
-        automated:
-          prune: true
-          selfHeal: false
-        syncOptions:
-          - CreateNamespace=true
-        retry:
-          limit: 5
-          backoff:
-            duration: 5s
-            factor: 2
-            maxDuration: 3m
+  project: default
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: argocd
+  sources:
+    - repoURL: https://github.com/luisbianconi/infrastructure.git
+      targetRevision: main
+      path: infrastructure/monitoring/applications/10-monitoring-crds.yaml
+    - repoURL: https://github.com/luisbianconi/infrastructure.git
+      targetRevision: main
+      path: infrastructure/monitoring/applications/20-monitoring-stack.yaml
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
